--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.20212"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ActSDCard"
+            android:exported="true" />
+        <activity
             android:name=".ActToggleButton"
             android:exported="true" />
         <activity
