--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="com.example.a20212">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,7 +15,7 @@
         android:theme="@style/Theme.20212"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".ActSDCard"
+            android:name=".ActMenu"
             android:exported="true" />
         <activity
             android:name=".ActToggleButton"
@@ -40,7 +42,7 @@
             android:name=".ActSpinner"
             android:exported="true" />
         <activity
-            android:name=".ActMenu"
+            android:name=".ActSDCard"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
